--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,8 @@
     <title>Site Profissional</title>
 </head>
 <body class="fundo">
+    
+<!-- ---- Navbar ---- -->
     <header class="nav my-3">
         <div class="container d-flex flex-wrap justify-content-between">
             <h1 class="nome-title">Pedro dos Santos</h1>
@@ -23,6 +25,7 @@
             </ul>
         </div>
     </header>
+<!-- ---- Fim navbar ---- -->
 
 <!-- ---- Introdução ---- -->
     <main class="">
@@ -33,8 +36,8 @@
                         <img src="img/foto.png" alt="Foto Pessoal">
                     </div>
                     <div class="intro-txt col-8 mt-5 pt-5">
-                        <h3 class="intro-h3">Olá, Meu nome é <span class="intro-span">Pedro dos Santos</span></h3>
-                        <p class="intro-p">Tenho 20 anos, sou de Itapira,SP no Brasil e desenvolvi esse site profissional como uma alternativa para meu cúrriculo e para demonstrar um pouco dos meu conhecimentos em Front-end.</p>
+                        <h3 class="intro-h3">Olá, Meu nome é <span class="intro-span">Pedro Henrique Leite dos Santos</span></h3>
+                        <p class="intro-p">Tenho 20 anos, sou de Itapira,SP no Brasil e desenvolvi esse site profissional como uma alternativa para meu currículo e para demonstrar um pouco dos meu conhecimentos em Front-end.</p>
                             <p class="intro-p">Abaixo você pode ver minhas experiências, conhecimentos e muito mais.</p>
                     </div>
                 </div>
@@ -43,10 +46,9 @@
 <!-- ---- Fim introdução ---- -->
 
 <!-- ---- Formações ---- -->
-
         <section class="formacoes my-5">
             <div class="container">
-                <h3 class="formacoes-title my-5">Formações</h3>
+                <h3 class="formacoes-title my-5">Formações Acadêmicas</h3>
                 <div class="d-flex justify-content-center my-5">
                     <div class="formacoes-txt-area p-4">
                         <h3 class="formacoes-h3">Superior em Desenvolvimento de Software Multiplataforma</h3>
@@ -149,15 +151,17 @@
                             <li class="infoextra-p mb-3">Participação de Equipe de Robótica da Colégio Objetivo Itapira, 2015 a 2016 durante o ensino fundamental</li>
                             <li class="infoextra-p my-3">Nível de Inglês: Intermediário</li>
                             <li class="infoextra-p my-3">Participação de Projetos Integradores na Faculdade com Front-end Designer e Engenheiro de Software</li>
-                            <li class="infoextra-p my-3">Link para GitHub com portfólio: https://github.com/pedrosaantos</li>
+                            <li class="infoextra-p my-3">Link para portfólio no Github: https://github.com/pedrosaantos</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
-<!-- ---- Extras ---- -->
+<!-- ---- Fim extras ---- -->
+
     </main>
 
+<!-- ---- Footer ---- -->
     <footer class="footer">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 mx-5">
@@ -182,6 +186,7 @@
           </div>
 
     </footer>
+<!-- ---- Footer ---- -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
